jsb-compiler/src/js/generated/JSBSyntaxParser.js
// Generated from JSBSyntax.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import JSBSyntaxListener from './JSBSyntaxListener.js';
import JSBSyntaxVisitor from './JSBSyntaxVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class JSBSyntaxParser extends antlr4.Parser {

    static grammarFileName = "JSBSyntax.g4";
    static literalNames = [ null, "'<props>'", "'</props>'", "'<code>'", 
                            "'</code>'", "'='", "';'", "'export'", "'function'", 
                            "'import'", "'from'", "'let'", "'const'", "'('", 
                            "')'", "','", "'if'", "'else'", "'<'", "'>'", 
                            "'</'", "'/>'", "'{{'", "'}}'", "'==='", "'=='", 
                            "'!='", "'<='", "'>='", "'+'", "'-'", "'*'", 
                            "'/'", "'%'", null, null, null, null, null, 
                            "'{'", "'}'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, "LINE_COMMENT", "ID", "STRING", 
                             "TEXT", "WS", "BRACE_OPEN", "BRACE_CLOSE", 
                             "ANY_CHAR_NO_BRACE" ];
    static ruleNames = [ "document", "propsDeclaration", "codeDeclaration", 
                         "contentDeclaration", "propsContent", "codeContent", 
                         "variableDeclaration", "functionDeclaration", "importDeclaration", 
                         "variableKind", "functionCall", "functionArgs", 
                         "functionContent", "functionContentBody", "statement", 
                         "expressionStatement", "ifStatement", "element", 
                         "elementContent", "attribute", "expressionInBraces", 
                         "expression" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = JSBSyntaxParser.ruleNames;
        this.literalNames = JSBSyntaxParser.literalNames;
        this.symbolicNames = JSBSyntaxParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 21:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 6);
    		case 1:
    			return this.precpred(this._ctx, 5);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	document() {
	    let localctx = new DocumentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, JSBSyntaxParser.RULE_document);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 45;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 44;
	            this.propsDeclaration();
	        }

	        this.state = 48;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 47;
	            this.codeDeclaration();
	        }

	        this.state = 51;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===18 || _la===37) {
	            this.state = 50;
	            this.contentDeclaration();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	propsDeclaration() {
	    let localctx = new PropsDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, JSBSyntaxParser.RULE_propsDeclaration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 53;
	        this.match(JSBSyntaxParser.T__0);
	        this.state = 54;
	        this.propsContent();
	        this.state = 55;
	        this.match(JSBSyntaxParser.T__1);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	codeDeclaration() {
	    let localctx = new CodeDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, JSBSyntaxParser.RULE_codeDeclaration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57;
	        this.match(JSBSyntaxParser.T__2);
	        this.state = 58;
	        this.codeContent();
	        this.state = 59;
	        this.match(JSBSyntaxParser.T__3);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	contentDeclaration() {
	    let localctx = new ContentDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, JSBSyntaxParser.RULE_contentDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 62; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 61;
	            this.element();
	            this.state = 64; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===18 || _la===37);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	propsContent() {
	    let localctx = new PropsContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, JSBSyntaxParser.RULE_propsContent);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 67;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===11 || _la===12) {
	            this.state = 66;
	            this.variableDeclaration();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	codeContent() {
	    let localctx = new CodeContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, JSBSyntaxParser.RULE_codeContent);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 7)) & ~0x1f) === 0 && ((1 << (_la - 7)) & 134217783) !== 0)) {
	            this.state = 73;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 11:
	            case 12:
	                this.state = 69;
	                this.variableDeclaration();
	                break;
	            case 7:
	            case 8:
	                this.state = 70;
	                this.functionDeclaration();
	                break;
	            case 9:
	                this.state = 71;
	                this.importDeclaration();
	                break;
	            case 34:
	                this.state = 72;
	                this.match(JSBSyntaxParser.LINE_COMMENT);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 77;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableDeclaration() {
	    let localctx = new VariableDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, JSBSyntaxParser.RULE_variableDeclaration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 78;
	        this.variableKind();
	        this.state = 79;
	        this.match(JSBSyntaxParser.ID);
	        this.state = 80;
	        this.match(JSBSyntaxParser.T__4);
	        this.state = 81;
	        this.expression(0);
	        this.state = 82;
	        this.match(JSBSyntaxParser.T__5);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionDeclaration() {
	    let localctx = new FunctionDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, JSBSyntaxParser.RULE_functionDeclaration);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 85;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===7) {
	            this.state = 84;
	            this.match(JSBSyntaxParser.T__6);
	        }

	        this.state = 87;
	        this.match(JSBSyntaxParser.T__7);
	        this.state = 88;
	        this.functionCall();
	        this.state = 89;
	        this.functionContent();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importDeclaration() {
	    let localctx = new ImportDeclarationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, JSBSyntaxParser.RULE_importDeclaration);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 91;
	        this.match(JSBSyntaxParser.T__8);
	        this.state = 92;
	        this.match(JSBSyntaxParser.ID);
	        this.state = 93;
	        this.match(JSBSyntaxParser.T__9);
	        this.state = 94;
	        this.match(JSBSyntaxParser.STRING);
	        this.state = 95;
	        this.match(JSBSyntaxParser.T__5);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	variableKind() {
	    let localctx = new VariableKindContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, JSBSyntaxParser.RULE_variableKind);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        _la = this._input.LA(1);
	        if(!(_la===11 || _la===12)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionCall() {
	    let localctx = new FunctionCallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, JSBSyntaxParser.RULE_functionCall);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 99;
	        this.match(JSBSyntaxParser.ID);
	        this.state = 100;
	        this.match(JSBSyntaxParser.T__12);
	        this.state = 102;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(((((_la - 13)) & ~0x1f) === 0 && ((1 << (_la - 13)) & 12582913) !== 0)) {
	            this.state = 101;
	            this.functionArgs();
	        }

	        this.state = 104;
	        this.match(JSBSyntaxParser.T__13);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionArgs() {
	    let localctx = new FunctionArgsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, JSBSyntaxParser.RULE_functionArgs);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 106;
	        this.expression(0);
	        this.state = 111;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===15) {
	            this.state = 107;
	            this.match(JSBSyntaxParser.T__14);
	            this.state = 108;
	            this.expression(0);
	            this.state = 113;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionContent() {
	    let localctx = new FunctionContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, JSBSyntaxParser.RULE_functionContent);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.match(JSBSyntaxParser.BRACE_OPEN);
	        this.state = 115;
	        this.functionContentBody();
	        this.state = 116;
	        this.match(JSBSyntaxParser.BRACE_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionContentBody() {
	    let localctx = new FunctionContentBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, JSBSyntaxParser.RULE_functionContentBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 122;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 80768) !== 0) || ((((_la - 34)) & ~0x1f) === 0 && ((1 << (_la - 34)) & 135) !== 0)) {
	            this.state = 120;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 7:
	            case 8:
	            case 9:
	            case 11:
	            case 12:
	            case 13:
	            case 16:
	            case 34:
	            case 35:
	            case 36:
	                this.state = 118;
	                this.statement();
	                break;
	            case 41:
	                this.state = 119;
	                this.match(JSBSyntaxParser.ANY_CHAR_NO_BRACE);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 124;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, JSBSyntaxParser.RULE_statement);
	    try {
	        this.state = 131;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 11:
	        case 12:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 125;
	            this.variableDeclaration();
	            break;
	        case 7:
	        case 8:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 126;
	            this.functionDeclaration();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 127;
	            this.importDeclaration();
	            break;
	        case 13:
	        case 35:
	        case 36:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 128;
	            this.expressionStatement();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 129;
	            this.ifStatement();
	            break;
	        case 34:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 130;
	            this.match(JSBSyntaxParser.LINE_COMMENT);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expressionStatement() {
	    let localctx = new ExpressionStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, JSBSyntaxParser.RULE_expressionStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        this.expression(0);
	        this.state = 134;
	        this.match(JSBSyntaxParser.T__5);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ifStatement() {
	    let localctx = new IfStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, JSBSyntaxParser.RULE_ifStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 136;
	        this.match(JSBSyntaxParser.T__15);
	        this.state = 137;
	        this.match(JSBSyntaxParser.T__12);
	        this.state = 138;
	        this.expression(0);
	        this.state = 139;
	        this.match(JSBSyntaxParser.T__13);
	        this.state = 140;
	        this.statement();
	        this.state = 143;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        if(la_===1) {
	            this.state = 141;
	            this.match(JSBSyntaxParser.T__16);
	            this.state = 142;
	            this.statement();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	element() {
	    let localctx = new ElementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, JSBSyntaxParser.RULE_element);
	    var _la = 0;
	    try {
	        this.state = 173;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,17,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 145;
	            this.match(JSBSyntaxParser.T__17);
	            this.state = 146;
	            this.match(JSBSyntaxParser.ID);
	            this.state = 150;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===35) {
	                this.state = 147;
	                this.attribute();
	                this.state = 152;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 153;
	            this.match(JSBSyntaxParser.T__18);
	            this.state = 157;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===18 || _la===37) {
	                this.state = 154;
	                this.elementContent();
	                this.state = 159;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 160;
	            this.match(JSBSyntaxParser.T__19);
	            this.state = 161;
	            this.match(JSBSyntaxParser.ID);
	            this.state = 162;
	            this.match(JSBSyntaxParser.T__18);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 163;
	            this.match(JSBSyntaxParser.T__17);
	            this.state = 164;
	            this.match(JSBSyntaxParser.ID);
	            this.state = 168;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===35) {
	                this.state = 165;
	                this.attribute();
	                this.state = 170;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 171;
	            this.match(JSBSyntaxParser.T__20);
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 172;
	            this.match(JSBSyntaxParser.TEXT);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elementContent() {
	    let localctx = new ElementContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 36, JSBSyntaxParser.RULE_elementContent);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 177; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 177;
	        		this._errHandler.sync(this);
	        		var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
	        		switch(la_) {
	        		case 1:
	        		    this.state = 175;
	        		    this.element();
	        		    break;

	        		case 2:
	        		    this.state = 176;
	        		    this.match(JSBSyntaxParser.TEXT);
	        		    break;

	        		}
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 179; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,19, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	attribute() {
	    let localctx = new AttributeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 38, JSBSyntaxParser.RULE_attribute);
	    try {
	        this.state = 187;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,20,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 181;
	            this.match(JSBSyntaxParser.ID);
	            this.state = 182;
	            this.match(JSBSyntaxParser.T__4);
	            this.state = 183;
	            this.match(JSBSyntaxParser.STRING);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 184;
	            this.match(JSBSyntaxParser.ID);
	            this.state = 185;
	            this.match(JSBSyntaxParser.T__4);
	            this.state = 186;
	            this.expressionInBraces();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	expressionInBraces() {
	    let localctx = new ExpressionInBracesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 40, JSBSyntaxParser.RULE_expressionInBraces);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this.match(JSBSyntaxParser.T__21);
	        this.state = 190;
	        this.expression(0);
	        this.state = 191;
	        this.match(JSBSyntaxParser.T__22);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 42;
	    this.enterRecursionRule(localctx, 42, JSBSyntaxParser.RULE_expression, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 201;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,21,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 194;
	            this.match(JSBSyntaxParser.T__12);
	            this.state = 195;
	            this.expression(0);
	            this.state = 196;
	            this.match(JSBSyntaxParser.T__13);
	            break;

	        case 2:
	            this.state = 198;
	            this.match(JSBSyntaxParser.STRING);
	            break;

	        case 3:
	            this.state = 199;
	            this.match(JSBSyntaxParser.ID);
	            break;

	        case 4:
	            this.state = 200;
	            this.functionCall();
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 211;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,23,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 209;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,22,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ExpressionContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, JSBSyntaxParser.RULE_expression);
	                    this.state = 203;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 204;
	                    _la = this._input.LA(1);
	                    if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 520880128) !== 0))) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 205;
	                    this.expression(7);
	                    break;

	                case 2:
	                    localctx = new ExpressionContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, JSBSyntaxParser.RULE_expression);
	                    this.state = 206;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 207;
	                    _la = this._input.LA(1);
	                    if(!(((((_la - 29)) & ~0x1f) === 0 && ((1 << (_la - 29)) & 31) !== 0))) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 208;
	                    this.expression(6);
	                    break;

	                } 
	            }
	            this.state = 213;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,23,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}


}

JSBSyntaxParser.EOF = antlr4.Token.EOF;
JSBSyntaxParser.T__0 = 1;
JSBSyntaxParser.T__1 = 2;
JSBSyntaxParser.T__2 = 3;
JSBSyntaxParser.T__3 = 4;
JSBSyntaxParser.T__4 = 5;
JSBSyntaxParser.T__5 = 6;
JSBSyntaxParser.T__6 = 7;
JSBSyntaxParser.T__7 = 8;
JSBSyntaxParser.T__8 = 9;
JSBSyntaxParser.T__9 = 10;
JSBSyntaxParser.T__10 = 11;
JSBSyntaxParser.T__11 = 12;
JSBSyntaxParser.T__12 = 13;
JSBSyntaxParser.T__13 = 14;
JSBSyntaxParser.T__14 = 15;
JSBSyntaxParser.T__15 = 16;
JSBSyntaxParser.T__16 = 17;
JSBSyntaxParser.T__17 = 18;
JSBSyntaxParser.T__18 = 19;
JSBSyntaxParser.T__19 = 20;
JSBSyntaxParser.T__20 = 21;
JSBSyntaxParser.T__21 = 22;
JSBSyntaxParser.T__22 = 23;
JSBSyntaxParser.T__23 = 24;
JSBSyntaxParser.T__24 = 25;
JSBSyntaxParser.T__25 = 26;
JSBSyntaxParser.T__26 = 27;
JSBSyntaxParser.T__27 = 28;
JSBSyntaxParser.T__28 = 29;
JSBSyntaxParser.T__29 = 30;
JSBSyntaxParser.T__30 = 31;
JSBSyntaxParser.T__31 = 32;
JSBSyntaxParser.T__32 = 33;
JSBSyntaxParser.LINE_COMMENT = 34;
JSBSyntaxParser.ID = 35;
JSBSyntaxParser.STRING = 36;
JSBSyntaxParser.TEXT = 37;
JSBSyntaxParser.WS = 38;
JSBSyntaxParser.BRACE_OPEN = 39;
JSBSyntaxParser.BRACE_CLOSE = 40;
JSBSyntaxParser.ANY_CHAR_NO_BRACE = 41;
